# Memutil

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Workspace.code-workspace
.github/workflows/: cmake-multi-platform.yml
Memutil/: CMakeLists.txt
Memutil/inc/MemUtil/: Import.hpp  Memutil.hpp
Memutil/inc/MemUtil/Generic/: DisableWarnings.hpp  Import_boost_assert.hpp  ScopeExit.hpp  StringStatic.hpp
Memutil/inc/MemUtil/STL_Imports/: STD_array.hpp  STD_bitset.hpp  STD_chrono.hpp  STD_cstdint.hpp  STD_cstdio.hpp  STD_cstring.hpp  STD_deque.hpp  STD_functional.hpp  STD_iostream.hpp  STD_memory_resource.hpp  STD_mutex.hpp  STD_random.hpp  STD_set.hpp  STD_unordered_map.hpp  STD_vector.hpp
Memutil/src/: Memutil.cpp
Memutil/src/Generic/: Import_boost_stacktrace.hpp  ScopeExit.cpp
tests/: .clang-format  CMakeLists.txt
tests/src/: Gtest.hpp  MemoryPoolTests.cpp  MemoryPoolTests.hpp
